# SP_qMT_proc

./: CMakeLists.txt  LICENSE  setup.py
.github/workflows/: build.yml
jsp_qmt/: GSLFunction.h  MTsat.h  MTsat.txx  SPqMT.cpp  SPqMT.h  SPqMT.txx  VFA.h  VFA.txx  _MTsat.cpp  _MTsat.pyx  _SPqMT.cpp  __init__.py  __main__.py  _jsp_qmt.cpp  _mtsat.cpp  _spqmt.cpp  _vfa.cpp  brentq.cpp  brentq.h  expm.cpp  expm.h  expm.txx  fit_JSPqMT_CLI.py  fit_MTsat_CLI.py  fit_SPqMT_CLI.py  fit_VFA_CLI.py  pulse.py  quadpack.cpp  quadpack.h  super_lorentzian.cpp  super_lorentzian.h  utils.py
jsp_qmt/cli/: __init__.py  mtsat.py  spqmt.py  vfa.py
tests/: test_expm.py  test_mtsat.py  test_pulse.py  test_spqmt.py  test_super_lorentzian.py  test_vfa.py
